# pipecat-asterisk

./: CHANGELOG.md  README.md  pyproject.toml
examples/pipecat_asterisk/: long_media_test.py  slin16_1k.raw
src/pipecat_asterisk/: __init__.py
src/pipecat_asterisk/serializer/: serializer.py
src/pipecat_asterisk/transport/: flow_controller.py  transport.py
src/pipecat_asterisk/utils/: __init__.py  audio_generator.py
