[project]
name = "pipecat-asterisk"
version = "0.1.1"
description = "This package provides a WebSocket transport for integrating Pipecat applications with Asterisk websocket channel, enabling real-time audio streaming and signalling interaction between Asterisk and Pipecat applications."
readme = "README.md"
authors = [
    { name = "Nikolai  Shakin", email = "nikolay.n.shakin@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "pipecat-ai>=1.1.0",
    "websockets>=15.0.1",
]

license = {text = "BSD-2-Clause"}

classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "pipecat-ai[google,silero]>=1.1.0",
    "uvicorn>=0.46.0",
]
